Fleshing out lobby system

--- a/games/LostCities/LostCities.html
+++ b/games/LostCities/LostCities.html
@@ -2,12 +2,25 @@
 <html>
 
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Lost Cities card game</title>
-    <script src="LostCities.js"></script>
+<meta charset="UTF-8">
+<title>Lost Cities card game</title>
+<script src="LostCities.js"></script>
+<style>
+{
+    margin: 0;
+    padding: 0;
+}
+html, body {
+    width: 100%;
+    height: 100%;
+}
+canvas {
+    display: block;
+}
+</style>
 </head>
 
-<body>
+<body style="margin: 0">
 
 <canvas id="lostCitiesCanvas" width="640" height="480"></canvas>
 
