--- a/gameCanvas/LostCities.html
+++ b/gameCanvas/LostCities.html
@@ -4,6 +4,7 @@
 <head lang="en">
 <meta charset="UTF-8">
 <title>Lost Cities card game</title>
+<script src="ggUI.js"></script>
 <script src="LostCities.js"></script>
 <style>
 {
