--- a/gameCanvas/LostCities.html
+++ b/gameCanvas/LostCities.html
@@ -2,32 +2,17 @@
 <html>
 
 <head lang="en">
-<meta charset="UTF-8">
-<title>Lost Cities card game</title>
-<script src="ggUI.js"></script>
-<script src="LostCities.js"></script>
-<style>
-{
-    margin: 0;
-    padding: 0;
-}
-html, body {
-    width: 100%;
-    height: 100%;
-}
-canvas {
-    display: block;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>Lost Cities card game</title>
+    <script src="ggUI.js"></script>
+    <script src="LostCities.js"></script>
+    <link rel="stylesheet" type="text/css" href="LostCities.css">
 </head>
 
 <body style="margin: 0">
 
 <canvas id="lostCitiesCanvas" width="640" height="480"></canvas>
-
-<script>
-initGame(document.getElementById('lostCitiesCanvas'));
-</script>
+<script>initGame(document.getElementById('lostCitiesCanvas'));</script>
 
 </body>
 
