--- a/gameCanvas/LostCities.html
+++ b/gameCanvas/LostCities.html
@@ -4,6 +4,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Lost Cities card game</title>
+    <script src="reconnectingWebSocket.js"></script>
+    <script src="requestAnimationFrame.js"></script>
     <script src="ggUI.js"></script>
     <script src="LostCities.js"></script>
     <link rel="stylesheet" type="text/css" href="LostCities.css">
