--- a/gameCanvas/LostCitiesGameTestP1.html
+++ b/gameCanvas/LostCitiesGameTestP1.html
@@ -4,6 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Lost Cities game test P1</title>
+    <script src="reconnectingWebSocket.js"></script>
     <script src="requestAnimationFrame.js"></script>
     <script src="ggUI.js"></script>
     <script src="LostCities.js"></script>
