Finish UI implementation for Splendor, move to its own file.

--- a/canvas/Splendor.html
+++ b/canvas/Splendor.html
@@ -15,7 +15,7 @@
 <body style="margin: 0">
 
 <canvas id="splendorCanvas" width="640" height="480"></canvas>
-<script>setupLobby(document.getElementById('splendorCanvas'), 'Splendor');</script>
+<script>setupLobby(document.getElementById('splendorCanvas'), 'Splendor', loadGameState);</script>
 
 </body>
 
