--- a/canvas/LostCities.html
+++ b/canvas/LostCities.html
@@ -9,7 +9,21 @@
     <script src="ggUI.js"></script>
     <script src="ggLobby.js"></script>
     <script src="LostCities.js"></script>
-    <link rel="stylesheet" type="text/css" href="LostCities.css">
+    <style>
+        {
+            margin: 0;
+            padding: 0;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+        }
+
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
 
 <body style="margin: 0">
