--- a/canvas/VoidPoro.html
+++ b/canvas/VoidPoro.html
@@ -3,12 +3,12 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Splendor card game</title>
+    <title>Void Poro</title>
     <script src="reconnectingWebSocket.js"></script>
     <script src="requestAnimationFrame.js"></script>
     <script src="ggUI.js"></script>
     <script src="ggLobby.js"></script>
-    <script src="Splendor.js"></script>
+    <script src="VoidPoro.js"></script>
     <style>
         {
             margin: 0;
@@ -26,10 +26,10 @@
     </style>
 </head>
 
-<body style="margin: 0" oncontextmenu="return false;">
+<body style="margin: 0">
 
-<canvas id="splendorCanvas" width="640" height="480"></canvas>
-<script>setupLobby(document.getElementById('splendorCanvas'), 'Splendor', loadGameState, handleActions);</script>
+<canvas id="voidPoroCanvas" width="640" height="480"></canvas>
+<script>setupLobby(document.getElementById('voidPoroCanvas'), 'VoidPoro', loadGameState, handleActions);</script>
 
 </body>
 
