--- a/canvas/TicTacToe.html
+++ b/canvas/TicTacToe.html
@@ -3,18 +3,13 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Void Poro</title>
+    <title>TicTacToe</title>
     <script src="reconnectingWebSocket.js"></script>
     <script src="requestAnimationFrame.js"></script>
     <script src="ggUI.js"></script>
     <script src="ggLobby.js"></script>
-    <script src="VoidPoro.js"></script>
+    <script src="TicTacToe.js"></script>
     <style>
-        {
-            margin: 0;
-            padding: 0;
-        }
-
         html, body {
             width: 100%;
             height: 100%;
@@ -28,8 +23,8 @@
 
 <body style="margin: 0">
 
-<canvas id="voidPoroCanvas" width="640" height="480"></canvas>
-<script>setupLobby(document.getElementById('voidPoroCanvas'), 'VoidPoro', loadGameState, handleActions);</script>
+<canvas id="ticTacToeCanvas" width="640" height="480"></canvas>
+<script>setupLobby(document.getElementById('ticTacToeCanvas'), 'TicTacToe', loadGameState, handleActions);</script>
 
 </body>
 
