Major refactor pt 1

--- a/canvas/TicTacToe.html
+++ b/canvas/TicTacToe.html
@@ -24,7 +24,7 @@
 <body style="margin: 0">
 
 <canvas id="ticTacToeCanvas" width="640" height="480"></canvas>
-<script>setupLobby(document.getElementById('ticTacToeCanvas'), 'TicTacToe', loadGameState, handleActions);</script>
+<script>setupLobby(document.getElementById('ticTacToeCanvas'), 'TicTacToe', gameStateHandler, actionHandler);</script>
 
 </body>
 
